[gd_scene load_steps=5 format=2]

[ext_resource path="res://Battles/BattleScreen/BattleScreen.gd" type="Script" id=1]
[ext_resource path="res://Battles/BattleDatabase/BattleDatabase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Battles/GridManager/GridManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Battles/BattleManager/BattleManager.tscn" type="PackedScene" id=4]

[node name="BattleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="BattleDatabase" parent="." instance=ExtResource( 2 )]

[node name="BattleManager" parent="." instance=ExtResource( 4 )]

[node name="GridManager" parent="." instance=ExtResource( 3 )]
